kubernetes/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:  
  labels:
    k8s-app: dijitle-metra
  name: dijitle-metra
  namespace: metra
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: dijitle-metra
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        k8s-app: dijitle-metra
    spec:
      containers:
      - image: metra:local
        imagePullPolicy: IfNotPresent
        name: dijitle-metra
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}        
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler      
      terminationGracePeriodSeconds: 30
