kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:  
  labels:
    k8s-app: dijitle-metra
  name: dijitle-metra-service
  namespace: metra
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    k8s-app: dijitle-metra
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
